0.2.3
Fixed min/max window by 3rd party.
Fixed resizing.
Fixed fallback colours.
Added -f,-b and -t options to set forecolour,backcolour and textcolour of window frame decorations.
Added '-k' option to set message key.
Added lfstklib ( for future stuff).
Minor visual fix.

0.2.2
Fixed drag top left.
Fixed multple 'on top' windows.
Removed some debugging info.
Restore windows to respective desktops/states on startup.
Done sticky window.

0.2.1
Code clean.
Removed bits of legacy code.
Done switching desktops.
Done restack.
Fixed x11 _NET_CLIENT_LIST_STACKING.
Fixed windows above.
Fixed windows below.
Fixed frame windows getting left over.
Code clean.
Done side drag-resize.

0.2.0
Done bottom drag-resize.
Done corner drag-resize.
Done cursor changes in draggers.
Added messageClass.
Done reframing etc etc.

0.0.0-0.2.0
Internal.